changed model_v01 and added model_v02 ipynb, updated gitignore to include html

--- a/model_v02_with_metadata.ipynb
+++ b/model_v02_with_metadata.ipynb
@@ -690,8 +690,8 @@
     "                                             shuffle=False) # you HAVE to set shuffle=False if you'll use train_gen.filenames list\n",
     "\n",
     "\n",
-    "modelFileName = 'm01cnn' # don't add extension, as \".h5\" will automatically be added later\n",
-    "datasetDescription = 'no metadata, rgb, 306x306, 30 epochs, no augmentation, tf' # tf == tensorflow, pt == pytorch\n",
+    "modelFileName = 'm02cnn' # don't add extension, as \".h5\" will automatically be added later\n",
+    "datasetDescription = 'metadata, rgb, 306x306, 30 epochs, no augmentation, tf' # tf == tensorflow, pt == pytorch\n",
     "spe = train_gen.samples // train_gen.batch_size\n",
     "vsteps = val_gen.samples // val_gen.batch_size\n",
     "tsteps = test_gen.samples // test_gen.batch_size\n",
