ignored f1score deprecated warning

--- a/model_v01_without_metadata.ipynb
+++ b/model_v01_without_metadata.ipynb
@@ -58,6 +58,7 @@
     "import json\n",
     "import time\n",
     "from datetime import datetime\n",
+    "import warnings\n",
     "\n",
     "import matplotlib.pyplot  as plt\n",
     "from PIL import Image, ImageFile\n",
@@ -429,8 +430,10 @@
     "        validation_steps = val_gen.samples // val_gen.batch_size\n",
     "\n",
     "    with mirrorStrategy.scope():\n",
-    "        f1 = tfa.metrics.F1Score(num_classes=len(train_gen.class_indices), \n",
-    "                                 average=None, name=\"f1_score\") # , average='macro'\n",
+    "        with warnings.catch_warnings():\n",
+    "            warnings.filterwarnings(\"ignore\", message=\"Metric F1Score implements a `reset_states()` method; rename it to `reset_state()`\")\n",
+    "            f1 = tfa.metrics.F1Score(num_classes=len(train_gen.class_indices), \n",
+    "                                    average=None, name=\"f1_score\") # , average='macro'\n",
     "        ImageFile.LOAD_TRUNCATED_IMAGES = True # allow truncated images to be read by PIL, which is used by keras's .fit()\n",
     "        \n",
     "        model.compile(loss='categorical_crossentropy', \n",
