fixed CustomDataframeIterator (self.feature_cols)

--- a/model_v02_with_metadata.ipynb
+++ b/model_v02_with_metadata.ipynb
@@ -1074,7 +1074,7 @@
     "\n",
     "        filepaths_batch = self.filenames[self.batch_index * self.batch_size : (self.batch_index + 1) * self.batch_size] # note that self.filenames/batch_index/batch_size are all attributes initialized upon calling \"super().__init__(*args, **kwargs)\"\n",
     "        image_filenames_batch = [os.path.basename(filepath) for filepath in filepaths_batch]\n",
-    "        img_props_batch = self.imgp_df.loc[image_filenames_batch].values # , self.feature_cols\n",
+    "        img_props_batch = self.imgp_df.loc[image_filenames_batch, self.feature_cols].values\n",
     "\n",
     "        return [img_batch, img_props_batch], y_batch\n",
     "    \n"
@@ -1273,6 +1273,26 @@
    ],
    "source": [
     "tf.keras.utils.plot_model(model, to_file='./models/m02cnn_visualized.png', rankdir='TB', show_shapes=True) # \"LR\" for horizontal display"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(next(train_gen)[0][1])"
    ]
   },
   {
