--- a/model_v02_with_metadata.ipynb
+++ b/model_v02_with_metadata.ipynb
@@ -1321,6 +1321,283 @@
      "text": [
       "Epoch 1/30\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\CS\\projects\\graduation_project\\.conda\\lib\\site-packages\\keras\\metrics.py:254: UserWarning:\n",
+      "\n",
+      "Metric F1Score implements a `reset_states()` method; rename it to `reset_state()` (without the final \"s\"). The name `reset_states()` has been deprecated to improve API consistency.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5924/5924 - 803s - loss: 11667.9541 - acc: 0.7838 - f1_score: 0.6160 - val_loss: 310.1797 - val_acc: 0.8831 - val_f1_score: 0.7649\n",
+      "INFO:tensorflow:Assets written to: models/checkpoints\\m02cnn\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\CS\\projects\\graduation_project\\.conda\\lib\\site-packages\\keras\\metrics.py:254: UserWarning:\n",
+      "\n",
+      "Metric F1Score implements a `reset_states()` method; rename it to `reset_state()` (without the final \"s\"). The name `reset_states()` has been deprecated to improve API consistency.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2/30\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\CS\\projects\\graduation_project\\.conda\\lib\\site-packages\\keras\\metrics.py:254: UserWarning:\n",
+      "\n",
+      "Metric F1Score implements a `reset_states()` method; rename it to `reset_state()` (without the final \"s\"). The name `reset_states()` has been deprecated to improve API consistency.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5924/5924 - 760s - loss: 35.9769 - acc: 0.8437 - f1_score: 0.6909 - val_loss: 0.6374 - val_acc: 0.8221 - val_f1_score: 0.5786\n",
+      "INFO:tensorflow:Assets written to: models/checkpoints\\m02cnn\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\CS\\projects\\graduation_project\\.conda\\lib\\site-packages\\keras\\metrics.py:254: UserWarning:\n",
+      "\n",
+      "Metric F1Score implements a `reset_states()` method; rename it to `reset_state()` (without the final \"s\"). The name `reset_states()` has been deprecated to improve API consistency.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3/30\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\CS\\projects\\graduation_project\\.conda\\lib\\site-packages\\keras\\metrics.py:254: UserWarning:\n",
+      "\n",
+      "Metric F1Score implements a `reset_states()` method; rename it to `reset_state()` (without the final \"s\"). The name `reset_states()` has been deprecated to improve API consistency.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5924/5924 - 751s - loss: 0.9536 - acc: 0.7831 - f1_score: 0.5542 - val_loss: 0.4711 - val_acc: 0.8409 - val_f1_score: 0.5633\n",
+      "INFO:tensorflow:Assets written to: models/checkpoints\\m02cnn\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\CS\\projects\\graduation_project\\.conda\\lib\\site-packages\\keras\\metrics.py:254: UserWarning:\n",
+      "\n",
+      "Metric F1Score implements a `reset_states()` method; rename it to `reset_state()` (without the final \"s\"). The name `reset_states()` has been deprecated to improve API consistency.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4/30\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\CS\\projects\\graduation_project\\.conda\\lib\\site-packages\\keras\\metrics.py:254: UserWarning:\n",
+      "\n",
+      "Metric F1Score implements a `reset_states()` method; rename it to `reset_state()` (without the final \"s\"). The name `reset_states()` has been deprecated to improve API consistency.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5924/5924 - 745s - loss: 0.6958 - acc: 0.7710 - f1_score: 0.5680 - val_loss: 0.4950 - val_acc: 0.8409 - val_f1_score: 0.5641\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\CS\\projects\\graduation_project\\.conda\\lib\\site-packages\\keras\\metrics.py:254: UserWarning:\n",
+      "\n",
+      "Metric F1Score implements a `reset_states()` method; rename it to `reset_state()` (without the final \"s\"). The name `reset_states()` has been deprecated to improve API consistency.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5/30\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\CS\\projects\\graduation_project\\.conda\\lib\\site-packages\\keras\\metrics.py:254: UserWarning:\n",
+      "\n",
+      "Metric F1Score implements a `reset_states()` method; rename it to `reset_state()` (without the final \"s\"). The name `reset_states()` has been deprecated to improve API consistency.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5924/5924 - 752s - loss: 0.3078 - acc: 0.9038 - f1_score: 0.7320 - val_loss: 0.2285 - val_acc: 0.9246 - val_f1_score: 0.7827\n",
+      "INFO:tensorflow:Assets written to: models/checkpoints\\m02cnn\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\CS\\projects\\graduation_project\\.conda\\lib\\site-packages\\keras\\metrics.py:254: UserWarning:\n",
+      "\n",
+      "Metric F1Score implements a `reset_states()` method; rename it to `reset_state()` (without the final \"s\"). The name `reset_states()` has been deprecated to improve API consistency.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6/30\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\CS\\projects\\graduation_project\\.conda\\lib\\site-packages\\keras\\metrics.py:254: UserWarning:\n",
+      "\n",
+      "Metric F1Score implements a `reset_states()` method; rename it to `reset_state()` (without the final \"s\"). The name `reset_states()` has been deprecated to improve API consistency.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5924/5924 - 744s - loss: 0.2353 - acc: 0.9273 - f1_score: 0.8126 - val_loss: 0.2025 - val_acc: 0.9342 - val_f1_score: 0.8339\n",
+      "INFO:tensorflow:Assets written to: models/checkpoints\\m02cnn\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\CS\\projects\\graduation_project\\.conda\\lib\\site-packages\\keras\\metrics.py:254: UserWarning:\n",
+      "\n",
+      "Metric F1Score implements a `reset_states()` method; rename it to `reset_state()` (without the final \"s\"). The name `reset_states()` has been deprecated to improve API consistency.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7/30\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\CS\\projects\\graduation_project\\.conda\\lib\\site-packages\\keras\\metrics.py:254: UserWarning:\n",
+      "\n",
+      "Metric F1Score implements a `reset_states()` method; rename it to `reset_state()` (without the final \"s\"). The name `reset_states()` has been deprecated to improve API consistency.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5924/5924 - 733s - loss: 0.1971 - acc: 0.9397 - f1_score: 0.8507 - val_loss: 0.2707 - val_acc: 0.9115 - val_f1_score: 0.8228\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\CS\\projects\\graduation_project\\.conda\\lib\\site-packages\\keras\\metrics.py:254: UserWarning:\n",
+      "\n",
+      "Metric F1Score implements a `reset_states()` method; rename it to `reset_state()` (without the final \"s\"). The name `reset_states()` has been deprecated to improve API consistency.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8/30\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\CS\\projects\\graduation_project\\.conda\\lib\\site-packages\\keras\\metrics.py:254: UserWarning:\n",
+      "\n",
+      "Metric F1Score implements a `reset_states()` method; rename it to `reset_state()` (without the final \"s\"). The name `reset_states()` has been deprecated to improve API consistency.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5924/5924 - 749s - loss: 0.1716 - acc: 0.9473 - f1_score: 0.8715 - val_loss: 0.4536 - val_acc: 0.9011 - val_f1_score: 0.7813\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\CS\\projects\\graduation_project\\.conda\\lib\\site-packages\\keras\\metrics.py:254: UserWarning:\n",
+      "\n",
+      "Metric F1Score implements a `reset_states()` method; rename it to `reset_state()` (without the final \"s\"). The name `reset_states()` has been deprecated to improve API consistency.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9/30\n"
+     ]
     }
    ],
    "source": [
