trained xgb 4, 4.1, 4.2 (on BayesOptimization). to do: hierarchical code (try)

--- a/gp_related/model_v01_tf_on_dataset_split_dir.ipynb
+++ b/gp_related/model_v01_tf_on_dataset_split_dir.ipynb
@@ -478,7 +478,7 @@
     "        additionalArgs = {\"yaxis_range\" : [0,1]}\n",
     "    else:\n",
     "        additionalArgs = {}\n",
-    "    if len(history['epoch']) == 1:\n",
+    "    if history.get('epoch') is None or len(history['epoch']) == 1:\n",
     "        oneEpoch = True\n",
     "    else:\n",
     "        oneEpoch = False\n",
