updated renaming conventions of html files in dataReDir

--- a/comparing_models_results.ipynb
+++ b/comparing_models_results.ipynb
@@ -625,11 +625,11 @@
     "    df_html = df.drop(df.columns[[2,3]], axis=1, inplace=False)\n",
     "    df1 = df_html.sort_values(by=['actual class name', 'prediction probability'], ascending=[True, True]).reset_index(drop=True) # drop=True to remove the \"index\" column \n",
     "    # saving the dataframe with misclassified labels or low probability and with images displayed (in \"image\" column) locally and without predicted/actual labels\n",
-    "    df1.to_html(f'dataset_related/{modelFileName} on test df, class and probs sorting, {datasetDescription}.html', \n",
+    "    df1.to_html(f'dataset_related/{modelFileName} test -  class and probs sorting, {datasetDescription}.html', \n",
     "                escape=False, formatters=dict(image = pathToImageHtml))\n",
     "    \n",
     "    df2 = df_html.sort_values(by='prediction probability', ascending=False).reset_index(drop=True)\n",
-    "    df2.to_html(f'dataset_related/{modelFileName} on test df, probs sorting, {datasetDescription}.html', \n",
+    "    df2.to_html(f'dataset_related/{modelFileName} test -  probs sorting, {datasetDescription}.html', \n",
     "                escape=False, formatters=dict(image = pathToImageHtml))\n",
     "\n",
     "    # we can now see the results by opening the html page in the directory stated above\n",
@@ -1264,23 +1264,23 @@
       "╒════╤═════════════════╤═══════════════════════════════════════════════════════════════════════════════════════════════════════════╕\n",
       "│    │  model version  │ description                                                                                               │\n",
       "╞════╪═════════════════╪═══════════════════════════════════════════════════════════════════════════════════════════════════════════╡\n",
-      "│ 1  │        1        │ no metadata, 8 batch size, rgb, 306x306, 30 epochs, no augmentation, tf.html                              │\n",
+      "│ 1  │        1        │ no metadata, 8 batch size, 30 epochs, no aug, tf.html                              │\n",
       "├────┼─────────────────┼───────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ 2  │       1.1       │ no metadata, 32 batch size, rgb, 306x306, 30 epochs, no augmentation, tf.html                             │\n",
+      "│ 2  │       1.1       │ no metadata, 32 batch size, 30 epochs, no aug, tf.html                             │\n",
       "├────┼─────────────────┼───────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ 3  │       1.3       │ no metadata, 16 batch size, rgb, 306x306, 30 epochs, no augmentation, tf.html                             │\n",
+      "│ 3  │       1.3       │ no metadata, 16 batch size, 30 epochs, no aug, tf.html                             │\n",
       "├────┼─────────────────┼───────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ 4  │       1.4       │ no metadata, 16 batch size, rgb, 306x306, 30 epochs, rotated, tf.html                                     │\n",
+      "│ 4  │       1.4       │ no metadata, 16 batch size, 30 epochs, rotated, tf.html                                     │\n",
       "├────┼─────────────────┼───────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ 5  │        2        │ color metadata, 16 batch size, rgb, 306x306, 30 epochs, no augmentation, tf.html                          │\n",
+      "│ 5  │        2        │ color metadata, 16 batch size, 30 epochs, no aug, tf.html                          │\n",
       "├────┼─────────────────┼───────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ 6  │       2.1       │ mm_scaled_color metadata, 16 batch size, rgb, 306x306, 30 epochs, no augmentation, tf.html                │\n",
+      "│ 6  │       2.1       │ mm_scaled_color metadata, 16 batch size, 30 epochs, no aug, tf.html                │\n",
       "├────┼─────────────────┼───────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ 7  │       2.2       │ color-face metadata, 16 batch size, rgb, 306x306, 30 epochs, no augmentation, tf.html                     │\n",
+      "│ 7  │       2.2       │ color-face metadata, 16 batch size, 30 epochs, no aug, tf.html                     │\n",
       "├────┼─────────────────┼───────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ 8  │       2.3       │ mm_scaled_color-face metadata, 16 batch size, rgb, 306x306, 30 epochs, no augmentation, tf.html           │\n",
+      "│ 8  │       2.3       │ mm_scaled_color-face metadata, 16 batch size, 30 epochs, no aug, tf.html           │\n",
       "├────┼─────────────────┼───────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ 9  │       2.5       │ all-normalized color-face-text metadata, 16 batch size, rgb, 306x306, 30 epochs, no augmentation, tf.html │\n",
+      "│ 9  │       2.5       │ all-normalized color-face-text metadata, 16 batch size, 30 epochs, no aug, tf.html │\n",
       "╘════╧═════════════════╧═══════════════════════════════════════════════════════════════════════════════════════════════════════════╛\n"
      ]
     }
