--- a/gp_related/draft_xgboost_models.ipynb
+++ b/gp_related/draft_xgboost_models.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# XGBoost Model on loaded m01.1 CNN Model, Original Dataset with no Metadata, All Batch Size, and 100 Epochs"
+    "# XGBoost Model on used m01.1 CNN Model, Original Dataset with no Metadata, All Batch Size, and 100 Epochs"
    ]
   },
   {
