--- a/model_v02_with_metadata_for_pc.ipynb
+++ b/model_v02_with_metadata_for_pc.ipynb
@@ -625,11 +625,11 @@
     "    df_html = df.drop(df.columns[[2,3]], axis=1, inplace=False)\n",
     "    df1 = df_html.sort_values(by=['actual class name', 'prediction probability'], ascending=[True, True]).reset_index(drop=True) # drop=True to remove the \"index\" column \n",
     "    # saving the dataframe with misclassified labels or low probability and with images displayed (in \"image\" column) locally and without predicted/actual labels\n",
-    "    df1.to_html(f'dataset_related/{modelFileName} on test df, class and probs sorting, {datasetDescription}.html', \n",
+    "    df1.to_html(f'dataset_related/{modelFileName} test -  class and probs sorting, {datasetDescription}.html', \n",
     "                escape=False, formatters=dict(image = pathToImageHtml))\n",
     "    \n",
     "    df2 = df_html.sort_values(by='prediction probability', ascending=False).reset_index(drop=True)\n",
-    "    df2.to_html(f'dataset_related/{modelFileName} on test df, probs sorting, {datasetDescription}.html', \n",
+    "    df2.to_html(f'dataset_related/{modelFileName} test -  probs sorting, {datasetDescription}.html', \n",
     "                escape=False, formatters=dict(image = pathToImageHtml))\n",
     "\n",
     "    # we can now see the results by opening the html page in the directory stated above\n",
@@ -1243,7 +1243,7 @@
     "\n",
     "\n",
     "modelFileName = 'm02cnn' # don't add extension, as \".h5\" will automatically be added later\n",
-    "datasetDescription = 'color metadata, 16 batch size, rgb, 306x306, 30 epochs, no augmentation, tf' # tf == tensorflow, pt == pytorch\n",
+    "datasetDescription = 'color metadata, 16 batch size, 30 epochs, no aug, tf' # tf == tensorflow, pt == pytorch\n",
     "df_chosen_features_num = len(feature_cols_for_v02)\n",
     "spe = train_gen.samples // train_gen.batch_size\n",
     "vsteps = val_gen.samples // val_gen.batch_size\n",
