done (ISA) with first mamba environment. to do: work on hierarchy lightning and later create another environment for dataset_preprocessing ipynb files. I also started working on torchmetric on lightning model for MNIST dataset

--- a/gp_related/model_v01_tf_on_dataset_split_dir.ipynb
+++ b/gp_related/model_v01_tf_on_dataset_split_dir.ipynb
@@ -64,16 +64,16 @@
     "import lzma\n",
     "from tqdm.notebook import tqdm\n",
     "from collections import Counter\n",
-    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "from keras_preprocessing.image import ImageDataGenerator\n",
     "from sklearn.model_selection import train_test_split\n",
     "from concurrent.futures import ThreadPoolExecutor\n",
     "from functools import partial\n",
     "\n",
     "from tensorflow import keras\n",
-    "from keras import optimizers, datasets, layers, models\n",
-    "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint\n",
+    "from tensorflow.python.keras import optimizers, layers, models\n",
+    "from tensorflow.python.keras.callbacks import EarlyStopping, ModelCheckpoint\n",
     "from tensorflow.python.keras import backend as K\n",
-    "import tensorflow_addons as tfa\n",
+    "from tf_f1score import F1Score\n",
     "from sklearn.metrics import classification_report \n",
     "\n",
     "import download_imgs # used in getAsyncImgFunctions()"
@@ -373,7 +373,7 @@
     "    # Trains & tests model, then returns the trained model with metrics in \"history\" dictionary and test predictions\n",
     "    # Pre requisites: \n",
     "    # install pillow then \"from PIL import Image, ImageFile\"\n",
-    "    # install tensorflow_addons then \"import tensorflow_addons as tfa\"\n",
+    "    # \n",
     "    # \"import regex as re\"\n",
     "    #\n",
     "    # before calling the function, execute: \"mirrorStrategy = tf.distribute.MirroredStrategy()\"\n",
@@ -383,7 +383,10 @@
     "    # i.e., if you have a pickle/model file with \"1\" as the first digit sequence occurence in its name, then don't use \"1\" again, as that will overwrite the previous pickle file\n",
     "    \n",
     "    if load:\n",
-    "        model = keras.models.load_model(f'models/{model_file_name}')\n",
+    "        try: # in case we're loading an old model, we want to load tensorflow_addons.metrics.F1Score() as tf_f1score.F1Score() \n",
+    "            model = keras.models.load_model(f'models/{model_file_name}.h5', custom_objects={\"Addons>F1Score\": F1Score })\n",
+    "        except: \n",
+    "            model = keras.models.load_model(f'models/{model_file_name}.h5', custom_objects={\"F1Score\": F1Score })            modelNumber = re.findall(r'\\d+(?:\\.\\d+)?', model_file_name)[0]\n",
     "        modelNumber = re.findall(r'\\d+', model_file_name)[0]\n",
     "        history = pklLoad(f'models/m{modelNumber}history.pickle')\n",
     "        return model, history\n",
@@ -392,9 +395,10 @@
     "        steps_per_epoch = train_gen.samples // train_gen.batch_size\n",
     "    if (validation_steps is None):\n",
     "        validation_steps = val_gen.samples // val_gen.batch_size\n",
+    "    test_steps = test_gen.samples // test_gen.batch_size\n",
     "\n",
     "    with mirrorStrategy.scope():\n",
-    "        f1 = tfa.metrics.F1Score(num_classes=len(train_gen.class_indices), average=None, name=\"f1_score\") # , average='macro'\n",
+    "        f1 = F1Score(num_classes=len(train_gen.class_indices), average=None, name=\"f1_score\") # , average='macro'\n",
     "        ImageFile.LOAD_TRUNCATED_IMAGES = True # allow truncated images to be read by PIL, which is used by keras's .fit()\n",
     "        model.compile(loss='categorical_crossentropy', optimizer=optimizer, metrics=['acc', f1, *additionalMetrics])\n",
     "        checkpointer = ModelCheckpoint(f'models/{model_file_name}', verbose=0)\n",
@@ -754,7 +758,7 @@
     "                        val_gen, \n",
     "                        test_gen, \n",
     "                        modelFileName, \n",
-    "                        load=True)\n",
+    "                        load_only=True)\n",
     "dfTestResults = createTestResultsDf(history['test_yPred'], test_gen, history, datasetDescription, saveHtml=True)"
    ]
   },
