--- a/comparing_models_results.ipynb
+++ b/comparing_models_results.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -82,18 +83,18 @@
     "import lzma\n",
     "from tqdm.notebook import tqdm\n",
     "from collections import Counter\n",
-    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "from keras_preprocessing.image import ImageDataGenerator\n",
     "from sklearn.model_selection import train_test_split\n",
     "from concurrent.futures import ThreadPoolExecutor\n",
     "from functools import partial\n",
     "\n",
     "from tensorflow import keras\n",
-    "from keras import optimizers, datasets, layers, models\n",
-    "from keras.layers import Input, Conv2D, MaxPooling2D, Flatten, Dense, concatenate\n",
-    "from keras.models import Model\n",
-    "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint, TensorBoard, Callback\n",
+    "from tensorflow.python.keras import optimizers, layers, models\n",
+    "from tensorflow.python.keras.layers import Input, Conv2D, MaxPooling2D, Flatten, Dense, concatenate\n",
+    "from tensorflow.python.keras.models import Model\n",
+    "from tensorflow.python.keras.callbacks import EarlyStopping, ModelCheckpoint, TensorBoard, Callback\n",
     "from tensorflow.python.keras import backend as K\n",
-    "import tensorflow_addons as tfa\n",
+    "from tf_f1score import F1Score\n",
     "from tensorflow.python.ops import summary_ops_v2\n",
     "from sklearn.metrics import classification_report \n",
     "from sklearn.preprocessing import MinMaxScaler"
@@ -500,7 +501,7 @@
     "    # Trains & tests model, then returns the trained model with metrics in \"history\" dictionary and test predictions\n",
     "    # Pre requisites: \n",
     "    # install pillow then \"from PIL import Image, ImageFile\"\n",
-    "    # install tensorflow_addons then \"import tensorflow_addons as tfa\"\n",
+    "    # \n",
     "    # \"import regex as re\"\n",
     "    #\n",
     "    # before calling the function, execute: \"mirrorStrategy = tf.distribute.MirroredStrategy()\"\n",
@@ -513,12 +514,15 @@
     "        steps_per_epoch = train_gen.samples // train_gen.batch_size\n",
     "    if (validation_steps is None):\n",
     "        validation_steps = val_gen.samples // val_gen.batch_size\n",
-    "\n",
+    "    test_steps = test_gen.samples // test_gen.batch_size\n",
+    "    \n",
     "    with mirrorStrategy.scope():\n",
     "        \n",
     "        if load_only or initial_epoch:\n",
-    "            model = keras.models.load_model(f'models/{model_file_name}.h5')\n",
-    "            modelNumber = re.findall(r'\\d+(?:\\.\\d+)?', model_file_name)[0]\n",
+    "            try: # in case we're loading an old model, we want to load tensorflow_addons.metrics.F1Score() as tf_f1score.F1Score() \n",
+    "                model = keras.models.load_model(f'models/{model_file_name}.h5', custom_objects={\"Addons>F1Score\": F1Score })\n",
+    "            except: \n",
+    "                model = keras.models.load_model(f'models/{model_file_name}.h5', custom_objects={\"F1Score\": F1Score })            modelNumber = re.findall(r'\\d+(?:\\.\\d+)?', model_file_name)[0]\n",
     "            history = pklLoad(f'models/m{modelNumber}history.pickle')\n",
     "            if load_only:\n",
     "                return model, history\n",
@@ -528,7 +532,7 @@
     "        if not initial_epoch:\n",
     "            with warnings.catch_warnings():\n",
     "                warnings.simplefilter(\"ignore\")\n",
-    "                f1 = tfa.metrics.F1Score(num_classes=len(train_gen.class_indices), \n",
+    "                f1 = F1Score(num_classes=len(train_gen.class_indices), \n",
     "                                        average=None, name=\"f1_score\") # , average='macro'\n",
     "            model.compile(loss='categorical_crossentropy', \n",
     "                        optimizer=optimizer, \n",
@@ -549,7 +553,7 @@
     "        \n",
     "        model.save(f'models/{model_file_name}.h5')\n",
     "\n",
-    "        yPredTestOneHotEncoded = model.predict(test_gen, workers=10)\n",
+    "        yPredTestOneHotEncoded = model.predict(test_gen, workers=10, steps=test_steps, verbose=1) # newer versions of TF will run indefinitely if 'steps' argument is not provided\n",
     "        yTrueTest = test_gen.labels[:len(yPredTestOneHotEncoded)]\n",
     "        yTrueTest = np.array(yTrueTest)\n",
     "\n",
@@ -718,10 +722,10 @@
     "            and not re.search(r\"Assets written to\", record.getMessage())\n",
     "            and not re.search(r\"INFO:tensorflow:Reduce to\", record.getMessage()))\n",
     "\n",
-    "logging.getLogger('tensorflow.keras.callbacks.ModelCheckpoint').setLevel(logging.WARNING) # done to hide this INFO message: INFO:tensorflow:Assets written to: models/checkpoints\\m02cnn\\assets  # alternative that didn't work: .addFilter(filter) # .setLevel(logging.WARNING)\n",
-    "logging.getLogger('tensorflow.keras.callbacks.TensorBoard').addFilter(filter) # done to hide this warning message: Metric F1Score implements a `reset_states()` method; rename it to `reset_state()` (without the final \"s\"). The name `reset_states()` has been deprecated to improve API consistency.\n",
+    "logging.getLogger('tensorflow.python.keras.callbacks.ModelCheckpoint').setLevel(logging.WARNING) # done to hide this INFO message: INFO:tensorflow:Assets written to: models/checkpoints\\m02cnn\\assets  # alternative that didn't work: .addFilter(filter) # .setLevel(logging.WARNING)\n",
+    "logging.getLogger('tensorflow.python.keras.callbacks.TensorBoard').addFilter(filter) # done to hide this warning message: Metric F1Score implements a `reset_states()` method; rename it to `reset_state()` (without the final \"s\"). The name `reset_states()` has been deprecated to improve API consistency.\n",
     "warnings.filterwarnings(\"ignore\", message=\"UserWarning:\") # Metric F1Score implements a `reset_states()` method\n",
-    "logging.getLogger('tfa.metrics.F1Score').setLevel(logging.ERROR) # does not work for some reason"
+    "logging.getLogger('F1Score').setLevel(logging.ERROR) # does not work for some reason"
    ]
   },
   {
