--- a/gp_related/debugging_cells_for_getImgsPropsDf_logic.ipynb
+++ b/gp_related/debugging_cells_for_getImgsPropsDf_logic.ipynb
@@ -93,7 +93,7 @@
     "import lzma\n",
     "from tqdm.notebook import tqdm\n",
     "from collections import Counter\n",
-    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "from keras_preprocessing.image import ImageDataGenerator\n",
     "from sklearn.model_selection import train_test_split\n",
     "from concurrent.futures import ThreadPoolExecutor, as_completed, wait\n",
     "from functools import partial\n",
@@ -101,10 +101,10 @@
     "from line_profiler import LineProfiler\n",
     "\n",
     "from tensorflow import keras\n",
-    "from keras import optimizers, datasets, layers, models\n",
-    "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint\n",
+    "from tensorflow.python.keras import optimizers, layers, models\n",
+    "from tensorflow.python.keras.callbacks import EarlyStopping, ModelCheckpoint\n",
     "from tensorflow.python.keras import backend as K\n",
-    "import tensorflow_addons as tfa\n",
+    "from tf_f1score import F1Score\n",
     "from sklearn.metrics import classification_report \n",
     "\n",
     "# import easyocr\n",
