--- a/model_v02_with_metadata_for_pc.ipynb
+++ b/model_v02_with_metadata_for_pc.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -13,19 +14,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "h:\\projects\\graduation_project\\.conda\\lib\\site-packages\\tensorflow_addons\\utils\\ensure_tf_install.py:53: UserWarning:\n",
-      "\n",
-      "Tensorflow Addons supports using Python ops for all Tensorflow versions above or equal to 2.3.0 and strictly below 2.6.0 (nightly versions are not supported). \n",
-      " The versions of TensorFlow you are currently using is 2.6.0 and is not supported. \n",
-      "Some things might work, some things might not.\n",
-      "If you were to encounter a bug, do not file an issue.\n",
-      "If you want to make sure you're using a tested and supported configuration, either change the TensorFlow version or the TensorFlow Addons's version. \n",
-      "You can find the compatibility matrix in TensorFlow Addon's readme:\n",
-      "https://github.com/tensorflow/addons\n",
-      "\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'datasets' from 'tensorflow.python.keras' (d:\\CS\\projects\\graduation_project\\.mamba\\lib\\site-packages\\tensorflow\\python\\keras\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 59\u001b[0m\n\u001b[0;32m     56\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mfunctools\u001b[39;00m \u001b[39mimport\u001b[39;00m partial\n\u001b[0;32m     58\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtensorflow\u001b[39;00m \u001b[39mimport\u001b[39;00m keras\n\u001b[1;32m---> 59\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtensorflow\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpython\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mkeras\u001b[39;00m \u001b[39mimport\u001b[39;00m optimizers, datasets, layers, models\n\u001b[0;32m     60\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtensorflow\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpython\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mkeras\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mlayers\u001b[39;00m \u001b[39mimport\u001b[39;00m Input, Conv2D, MaxPooling2D, Flatten, Dense, concatenate\n\u001b[0;32m     61\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtensorflow\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpython\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mkeras\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodels\u001b[39;00m \u001b[39mimport\u001b[39;00m Model\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'datasets' from 'tensorflow.python.keras' (d:\\CS\\projects\\graduation_project\\.mamba\\lib\\site-packages\\tensorflow\\python\\keras\\__init__.py)"
      ]
     }
    ],
@@ -82,18 +78,18 @@
     "import lzma\n",
     "from tqdm.notebook import tqdm\n",
     "from collections import Counter\n",
-    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "from keras_preprocessing.image import ImageDataGenerator\n",
     "from sklearn.model_selection import train_test_split\n",
     "from concurrent.futures import ThreadPoolExecutor\n",
     "from functools import partial\n",
     "\n",
     "from tensorflow import keras\n",
-    "from keras import optimizers, datasets, layers, models\n",
-    "from keras.layers import Input, Conv2D, MaxPooling2D, Flatten, Dense, concatenate\n",
-    "from keras.models import Model\n",
-    "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint, TensorBoard, Callback\n",
+    "from tensorflow.python.keras import optimizers, datasets, layers, models\n",
+    "from tensorflow.python.keras.layers import Input, Conv2D, MaxPooling2D, Flatten, Dense, concatenate\n",
+    "from tensorflow.python.keras.models import Model\n",
+    "from tensorflow.python.keras.callbacks import EarlyStopping, ModelCheckpoint, TensorBoard, Callback\n",
     "from tensorflow.python.keras import backend as K\n",
-    "import tensorflow_addons as tfa\n",
+    "from tf_f1score import F1Score\n",
     "from tensorflow.python.ops import summary_ops_v2\n",
     "from sklearn.metrics import classification_report \n",
     "from sklearn.preprocessing import MinMaxScaler"
@@ -500,7 +496,7 @@
     "    # Trains & tests model, then returns the trained model with metrics in \"history\" dictionary and test predictions\n",
     "    # Pre requisites: \n",
     "    # install pillow then \"from PIL import Image, ImageFile\"\n",
-    "    # install tensorflow_addons then \"import tensorflow_addons as tfa\"\n",
+    "    # \n",
     "    # \"import regex as re\"\n",
     "    #\n",
     "    # before calling the function, execute: \"mirrorStrategy = tf.distribute.MirroredStrategy()\"\n",
@@ -513,11 +509,15 @@
     "        steps_per_epoch = train_gen.samples // train_gen.batch_size\n",
     "    if (validation_steps is None):\n",
     "        validation_steps = val_gen.samples // val_gen.batch_size\n",
+    "    test_steps = test_gen.samples // test_gen.batch_size\n",
     "\n",
     "    with mirrorStrategy.scope():\n",
     "        \n",
     "        if load_only or initial_epoch:\n",
-    "            model = keras.models.load_model(f'models/{model_file_name}.h5')\n",
+    "            try: # in case we're loading an old model, we want to load tensorflow_addons.metrics.F1Score() as tf_f1score.F1Score() \n",
+    "                model = keras.models.load_model(f'models/{model_file_name}.h5', custom_objects={\"Addons>F1Score\": F1Score })\n",
+    "            except: \n",
+    "                model = keras.models.load_model(f'models/{model_file_name}.h5', custom_objects={\"F1Score\": F1Score })            modelNumber = re.findall(r'\\d+(?:\\.\\d+)?', model_file_name)[0]\n",
     "            modelNumber = re.findall(r'\\d+(?:\\.\\d+)?', model_file_name)[0]\n",
     "            history = pklLoad(f'models/m{modelNumber}history.pickle')\n",
     "            if load_only:\n",
@@ -528,7 +528,7 @@
     "        if not initial_epoch:\n",
     "            with warnings.catch_warnings():\n",
     "                warnings.simplefilter(\"ignore\")\n",
-    "                f1 = tfa.metrics.F1Score(num_classes=len(train_gen.class_indices), \n",
+    "                f1 = F1Score(num_classes=len(train_gen.class_indices), \n",
     "                                        average=None, name=\"f1_score\") # , average='macro'\n",
     "            model.compile(loss='categorical_crossentropy', \n",
     "                        optimizer=optimizer, \n",
@@ -549,7 +549,7 @@
     "        \n",
     "        model.save(f'models/{model_file_name}.h5')\n",
     "\n",
-    "        yPredTestOneHotEncoded = model.predict(test_gen, workers=10)\n",
+    "        yPredTestOneHotEncoded = model.predict(test_gen, workers=10, steps=test_steps, verbose=1) # newer versions of TF will run indefinitely if 'steps' argument is not provided\n",
     "        yTrueTest = test_gen.labels[:len(yPredTestOneHotEncoded)]\n",
     "        yTrueTest = np.array(yTrueTest)\n",
     "\n",
@@ -718,10 +718,9 @@
     "            and not re.search(r\"Assets written to\", record.getMessage())\n",
     "            and not re.search(r\"INFO:tensorflow:Reduce to\", record.getMessage()))\n",
     "\n",
-    "logging.getLogger('tensorflow.keras.callbacks.ModelCheckpoint').setLevel(logging.WARNING) # done to hide this INFO message: INFO:tensorflow:Assets written to: models/checkpoints\\m02cnn\\assets  # alternative that didn't work: .addFilter(filter) # .setLevel(logging.WARNING)\n",
-    "logging.getLogger('tensorflow.keras.callbacks.TensorBoard').addFilter(filter) # done to hide this warning message: Metric F1Score implements a `reset_states()` method; rename it to `reset_state()` (without the final \"s\"). The name `reset_states()` has been deprecated to improve API consistency.\n",
-    "warnings.filterwarnings(\"ignore\", message=\"UserWarning:\") # Metric F1Score implements a `reset_states()` method\n",
-    "logging.getLogger('tfa.metrics.F1Score').setLevel(logging.ERROR) # does not work for some reason"
+    "logging.getLogger('tensorflow.python.keras.callbacks.ModelCheckpoint').setLevel(logging.WARNING) # done to hide this INFO message: INFO:tensorflow:Assets written to: models/checkpoints\\m02cnn\\assets  # alternative that didn't work: .addFilter(filter) # .setLevel(logging.WARNING)\n",
+    "logging.getLogger('tensorflow.python.keras.callbacks.TensorBoard').addFilter(filter) # done to hide this warning message: Metric F1Score implements a `reset_states()` method; rename it to `reset_state()` (without the final \"s\"). The name `reset_states()` has been deprecated to improve API consistency.\n",
+    "warnings.filterwarnings(\"ignore\", message=\"UserWarning:\") # Metric F1Score implements a `reset_states()` method"
    ]
   },
   {
@@ -1078,7 +1077,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras.utils import Sequence\n",
+    "from tensorflow.python.keras.utils.all_utils import Sequence\n",
     "\n",
     "class CustomDataGeneratorForV02(Sequence):\n",
     "    \"\"\"\n",
