--- a/gp_related/draft_hnn_models.ipynb
+++ b/gp_related/draft_hnn_models.ipynb
@@ -6,6 +6,99 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# this draft code is old and inaccurate, as simpleHierarchy model should be used differently (correct usage found in model_v03.. ipynb file)\n",
+    "\n",
+    "cgs = { # cgs <==> class groups\n",
+    "        \"colorDiversity\": (\"colorDiversity\", 2), # many or few\n",
+    "        \"manyColors\": (\"manyColors\", 4), # selfies, memes (e or f), or eGreetingsAndMisc (+1 if none of them)\n",
+    "        \"fewColors\": (\"fewColors\", 4), # socialMedia (e or f), fTxtMssgs, academic (photos or digital) (+1 if none of them)\n",
+    "        \"memes\": (\"memes\", 3), # e or f (+1 if none of them)\n",
+    "        \"socialMedia\": (\"socialMedia\", 3), # e or f (+1 if none of them)\n",
+    "        \"academic\": (\"academic\", 3) # photos or academic (+1 if none of them)\n",
+    "    }\n",
+    "\n",
+    "cs = { # cs <==> classes\n",
+    "    \"selfies\": (\"selfies\", 1),\n",
+    "    \"fmemes\": (\"fmemes\", 1),\n",
+    "    \"ememes\": (\"ememes\", 1),\n",
+    "    \"fSocialMedia\": (\"fSocialMedia\", 1),\n",
+    "    \"eSocialMedia\": (\"eSocialMedia\", 1),\n",
+    "    \"fTxtMssgs\": (\"fTxtMssgs\", 1),\n",
+    "    \"eGreetingsAndMisc\": (\"eGreetingsAndMisc\", 1),\n",
+    "    \"academicPhotos\": (\"academicPhotos\", 1),\n",
+    "    \"academicDigital\": (\"academicDigital\", 1),\n",
+    "}\n",
+    "\n",
+    "# smaller hierarchy\n",
+    "hierarchy = {\n",
+    "    cgs[\"colorDiversity\"] : [cgs[\"manyColors\"], cgs[\"fewColors\"]],\n",
+    "    cgs[\"manyColors\"] : [cgs[\"memes\"]],\n",
+    "    cgs[\"fewColors\"] : [cgs[\"socialMedia\"], cgs[\"academic\"]],\n",
+    "}\n",
+    "\n",
+    "# mapping flat labels to hierarchical labels\n",
+    "labelToHierarchy = {\n",
+    "    0 : [\n",
+    "            0, # diversity of colors: many or few (so classes: 0,1)\n",
+    "            0, # many colors: selfies, memes (fmm or emm), or eGreetingsAndMisc (+1 if none of them) (so classes: 0,1,2,3)\n",
+    "            3, # few colors: socialMedia (fsm or esm), fTxtMssgs, academic (photos or digital) (+1 if none of them) (so classes: 0,1,2,3)\n",
+    "            2, # meme type: fmm or emm (+1 if none of them) (so classes: 0,1,2)\n",
+    "            2, # social media type: fsm or esm (+1 if none of them) (so classes: 0,1,2)\n",
+    "            2, # academic type: photos or digital (+1 if none of them) (so classes: 0,1,2)\n",
+    "        ], \n",
+    "    1 : [0, 1, 3, 0, 2, 2],\n",
+    "    2 : [0, 1, 3, 1, 2, 2],\n",
+    "    3 : [1, 3, 0, 2, 0, 2],\n",
+    "    4 : [1, 3, 0, 2, 1, 2],\n",
+    "    5 : [1, 3, 1, 2, 2, 2],\n",
+    "    6 : [0, 2, 3, 2, 2, 2],\n",
+    "    7 : [1, 3, 2, 2, 2, 0],\n",
+    "    8 : [1, 3, 2, 2, 2, 1],\n",
+    "}\n",
+    "\n",
+    "# mapping hierarchical labels (integers) to hierarchical names (strings)\n",
+    "hierLabelToClassName = {\n",
+    "    # diversity of colors: many or few (so classes: 0,1)\n",
+    "    0 : ['manyColors', 'fewColors'], \n",
+    "    # many colors: selfies, memes (fmm or emm), or eGreetingsAndMisc (+1 if none of them) (so classes: 0,1,2,3)\n",
+    "    1 : ['00. selfies', 'memes', '70. eGreetingAndMisc', 'none'],\n",
+    "    # few colors: socialMedia (fsm or esm), fTxtMssgs, academic (photos or digital) (+1 if none of them) (so classes: 0,1,2,3)\n",
+    "    2 : ['socialMedia', '50. fTxtMssgs', 'academic', 'none'],\n",
+    "    # meme type: fmm or emm (+1 if none of them) (so classes: 0,1,2)\n",
+    "    3 : ['10. fmemes', '20. ememes', 'none'],\n",
+    "    # social media type: fsm or esm (+1 if none of them) (so classes: 0,1,2)\n",
+    "    4 : ['30. fSocialMedia', '40. fSocialMedia', 'none'],\n",
+    "     # academic type: photos or digital (+1 if none of them) (so classes: 0,1,2)\n",
+    "    5 : ['81. academicPhotos', '82. academicDigital', 'none'],\n",
+    "}\n",
+    "\n",
+    "# cgs = { # cgs <==> class groups\n",
+    "#         \"colorDiversity\": (\"colorDiversity\", 2), # many or few\n",
+    "#         \"manyColors\": (\"manyColors\", 4), # selfies, memes (e or f), or eGreetingsAndMisc\n",
+    "#         \"fewColors\": (\"fewColors\", 5), # socialMedia (e or f), fTxtMssgs, academic (photos or digital)\n",
+    "#         \"memes\": (\"memes\", 2), # e or f\n",
+    "#         \"socialMedia\": (\"socialMedia\", 2), # e or f\n",
+    "#         \"academic\": (\"academic\", 2) # photos or academic\n",
+    "#     }\n",
+    "\n",
+    "# # bigger hierarchy (I think you shouldn't use classes which have \"1\" as a value for the class)\n",
+    "# hierarchy = {\n",
+    "#     cgs[\"colorDiversity\"] : [cgs[\"manyColors\"], cgs[\"fewColors\"]],\n",
+    "#     cgs[\"manyColors\"] : [cs[\"selfies\"], cgs[\"memes\"], cs[\"eGreetingsAndMisc\"]],\n",
+    "#     cgs[\"fewColors\"] : [cgs[\"socialMedia\"], cs[\"fTxtMssgs\"], cgs[\"academic\"]],\n",
+    "\n",
+    "#     cgs[\"memes\"] : [cs[\"fmemes\"], cs[\"ememes\"]],\n",
+    "#     cgs[\"socialMedia\"] : [cs[\"fSocialMedia\"], cs[\"eSocialMedia\"]],\n",
+    "#     cgs[\"academic\"] : [cs[\"academicPhotos\"], cs[\"academicDigital\"]],\n",
+    "# }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def create_hnn_model_arch(model_version:str, img_size:tuple, class_groups:dict, classes:dict, hierarchy:dict):\n",
     "    base_model = nn.Sequential(\n",
     "        # note that padding is 0 to re-produce TF's implementation of m01, where the default value for 'padding' argument is 'valid' which means no padding\n",
